ridt -> iat
