# go/api_default.go
@@ -1,12 +1,12 @@
 /*
- * OIDC RIDT Userinfo Endpoint
+ * OIDC IAT Userinfo Endpoint
  *
- * Endpoint for OpenID Connect's Remote ID Token endpoint for userinfo.
+ * Endpoint for OpenID Connect's ID Assertion Token endpoint for userinfo.
  *
  * API version: 0.2.0
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
-package ridt
+package iat
 
 import (
 	"crypto/ecdsa"
@@ -26,6 +26,7 @@ import (
 	"os"
 	"path/filepath"
 	"reflect"
+	"strconv"
 	"strings"
 	"time"
 
@@ -518,13 +519,29 @@ func ValidateProofOfPossession(popToken *jwt.Token, popClaims jwt.MapClaims, use
 	return nil
 }
 
-func GenerateRidt(privateKey interface{}, algorithm jwt.SigningMethod, tokenClaims jwt.MapClaims, publicKeyJwk map[string]interface{}, userinfoClaims map[string]interface{}, config AppConfiguration) (string, []string, int64, error) {
+func GenerateIat(privateKey interface{}, algorithm jwt.SigningMethod, tokenClaims jwt.MapClaims, publicKeyJwk map[string]interface{}, userinfoClaims map[string]interface{}, config AppConfiguration) (string, []string, int64, error) {
 	// Compute token validity
 	expiresIn := config.DefaultTokenPeriod
 	if tokenLifetime, ok := tokenClaims["token_lifetime"]; ok {
-		popTokenLifetime := uint32(tokenLifetime.(float64))
-		if popTokenLifetime > config.MaxTokenPeriod {
-			expiresIn = config.MaxTokenPeriod
+		var popTokenLifetime uint64 = 0
+		switch tokenLifetime.(type) {
+		case string:
+			var err error
+			popTokenLifetime, err = strconv.ParseUint(tokenLifetime.(string), 10, 64)
+			if err != nil {
+				return "", nil, 0, err
+			}
+		case float64:
+			popTokenLifetime = uint64(tokenLifetime.(float64))
+		case int64:
+			popTokenLifetime = uint64(tokenLifetime.(int64))
+		case uint64:
+			popTokenLifetime = uint64(tokenLifetime.(uint64))
+		default:
+			return "", nil, 0, errors.New("Unexpected type of 'token_lifetime'")
+		}
+		if popTokenLifetime > uint64(config.MaxTokenPeriod) {
+			expiresIn = uint64(config.MaxTokenPeriod)
 		} else if popTokenLifetime > 0 {
 			expiresIn = popTokenLifetime
 		}
@@ -539,7 +556,7 @@ func GenerateRidt(privateKey interface{}, algorithm jwt.SigningMethod, tokenClai
 		nonce = base64.URLEncoding.EncodeToString(randBytes)
 	}
 
-	// Compose claims for remote id token
+	// Compose claims for ID Assertion Token
 	requestedClaims := jwt.MapClaims{}
 	if tokenClaims, err := StringFromJson(tokenClaims, "token_claims"); err == nil {
 		// Include only selected claims
@@ -589,17 +606,17 @@ func GenerateRidt(privateKey interface{}, algorithm jwt.SigningMethod, tokenClai
 	requestedClaims["cnf"] = confirmation
 
 	// Generate JWT
-	ridt := jwt.NewWithClaims(algorithm, requestedClaims)
-	ridt.Header["kid"] = config.KeyId
-	ridtString, err := ridt.SignedString(privateKey)
+	iat := jwt.NewWithClaims(algorithm, requestedClaims)
+	iat.Header["kid"] = config.KeyId
+	iatString, err := iat.SignedString(privateKey)
 	if err != nil {
-		return "", nil, 0, errors.New("failed to sign remote id token: " + err.Error())
+		return "", nil, 0, errors.New("failed to sign ID Assertion Token: " + err.Error())
 	}
 
-	return ridtString, claimNames, expiresAt, nil
+	return iatString, claimNames, expiresAt, nil
 }
 
-func GenRidt(w http.ResponseWriter, r *http.Request) {
+func GenIat(w http.ResponseWriter, r *http.Request) {
 	origin := r.Header.Get("Origin")
 	log.Print("origin: " + origin)
 	if origin != "" {
@@ -640,19 +657,19 @@ func GenRidt(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	// Generate remote id token
-	ridt, identityClaims, expiresAt, err := GenerateRidt(appPrivateKey, appConfig.SigningAlgorithm, popClaims, publicKeyJwk, userinfoClaims, appConfig)
+	// Generate ID Assertion Token
+	iat, identityClaims, expiresAt, err := GenerateIat(appPrivateKey, appConfig.SigningAlgorithm, popClaims, publicKeyJwk, userinfoClaims, appConfig)
 	if err != nil {
-		LogAndSendError(w, http.StatusInternalServerError, "internal server error", "unknown internal server error", "failed to generate remote id token: "+err.Error())
+		LogAndSendError(w, http.StatusInternalServerError, "internal server error", "unknown internal server error", "failed to generate ID Assertion Token: "+err.Error())
 		return
 	}
 
 	// Encode response
 	expiresIn := expiresAt - time.Now().Unix()
 	response := IatResponse{
-		RemoteIdToken: ridt,
-		ExpiresIn:     int32(expiresIn),
-		Claims:        strings.Join(identityClaims, " "),
+		IdAssertionToken: iat,
+		ExpiresIn:        int32(expiresIn),
+		Claims:           strings.Join(identityClaims, " "),
 	}
 
 	// Write response
@@ -663,7 +680,7 @@ func GenRidt(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(response)
 }
 
-func RidtOptions(w http.ResponseWriter, r *http.Request) {
+func IatOptions(w http.ResponseWriter, r *http.Request) {
 	origin := r.Header.Get("Origin")
 	log.Print("origin: " + origin)
 	if origin != "" {
