# go/routers.go
@@ -1,12 +1,12 @@
 /*
- * OIDC RIDT Userinfo Endpoint
+ * OIDC IAT Userinfo Endpoint
  *
- * Endpoint for OpenID Connect's Remote ID Token endpoint for userinfo.
+ * Endpoint for OpenID Connect's ID Assertion Token endpoint for userinfo.
  *
  * API version: 0.2.0
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
-package ridt
+package iat
 
 import (
 	"net/http"
@@ -43,15 +43,15 @@ func NewRouter() *mux.Router {
 
 var routes = Routes{
 	Route{
-		"GenRidt",
+		"GenIat",
 		strings.ToUpper("Post"),
 		"/",
-		GenRidt,
+		GenIat,
 	},
 	Route{
-		"RidtOptions",
+		"IatOptions",
 		strings.ToUpper("Options"),
 		"/",
-		RidtOptions,
+		IatOptions,
 	},
 }
